# MemoryAllocation

./: .gitignore  CMakeLists.txt  README.md  detailed_class_diagram.mermaid  main.cpp  system_architecture_diagram.mermaid
src/allocator/: fixAlloc.cpp  fixAlloc.h
src/allocator/base/: IAllocator.h
